fixes spot-598 disables horizontal scroll for space details

--- a/static/css/desktop.less
+++ b/static/css/desktop.less
@@ -93,7 +93,7 @@
                     .space-detail-name { font-size: 20px; color: @purple_text; margin: 5px 0;  line-height:20px; font-weight:normal; }
                     .close { position: absolute; right: 0; top: 0; float: none; }
                 }
-                .space-detail-body { overflow-y: auto; -webkit-overflow-scrolling: touch; border: solid 1px @grey_border; padding: 0; background-color: #EDEDED;
+                .space-detail-body { overflow-y: auto; overflow-x: hidden; -webkit-overflow-scrolling: touch; border: solid 1px @grey_border; padding: 0; background-color: #EDEDED;
 
                     .space-detail-body-inner { background: #fff; border: solid 1px @grey_border; padding: 5px; margin: 20px 0 20px 20px; width: 76%;
                         .image-container, .map-container { margin: 0 auto; }
